<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_welcome0"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvp.ui.activity.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_user_avatar"
                android:layout_width="@dimen/user_avatar_size"
                android:layout_height="@dimen/user_avatar_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/text_button_vertical_margin"
                android:layout_marginTop="@dimen/margin_large"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/text_button_vertical_margin"
                android:text="@string/register_tips_large"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/text_button_vertical_margin"
                android:text="@string/register_tips_small"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/half_trans_white_bg_edit_text"
                android:hint="@string/phone_hint"
                android:inputType="phone" />

            <EditText
                android:id="@+id/et_user_name"
                style="@style/half_trans_white_bg_edit_text"
                android:hint="@string/username_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_email"
                style="@style/half_trans_white_bg_edit_text"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress|textWebEmailAddress" />

            <EditText
                android:id="@+id/et_psw"
                style="@style/half_trans_white_bg_edit_text"
                android:hint="@string/psw_hint"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_create_account"
                style="@style/green_trans_btn"
                android:text="@string/create_account" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
