<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.activity.WelcomeActivity">


    <android.support.v4.view.ViewPager
        android:id="@+id/vp_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="30dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/ll_action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            style="@style/green_trans_btn"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_register"
            style="@style/green_trans_btn"
            android:text="@string/register" />
    </LinearLayout>

</FrameLayout>
